--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,14 +1,15 @@
 <!doctype html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./css/output.css" rel="stylesheet">
-</head>
-<body>
-<h1 class="text-3xl font-bold underline">
-    Hello world!
-</h1>
-<script src="./js/main.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>App with Routing</title>
+        <link href="./css/output.css" rel="stylesheet">
+    </head>
+    <body>
+        <div id="app">
+            <!-- Content will be dynamically loaded here -->
+        </div>
+        <script type="module" src="./js/main.js"></script>
+    </body>
 </html>
