--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -10,6 +10,6 @@
         <div id="app">
             <!-- Content will be dynamically loaded here -->
         </div>
-        <script type="module" src="./js/main.js"></script>
+        <script type="module" src="/js/main.js"></script>
     </body>
 </html>
