--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,8 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>App with Routing</title>
+        <title>Pong Portal</title>
         <link href="./css/output.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Orbitron:700&display=swap" rel="stylesheet">
+        <link rel="icon" type="image/png" href="./assets/logo.png">
     </head>
     <body>
         <div id="app">
