--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,17 +1,27 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Pong Portal</title>
-        <link href="./css/output.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Orbitron:700&display=swap" rel="stylesheet">
-        <link rel="icon" type="image/png" href="./assets/logo.png">
-    </head>
-    <body>
-        <div id="app">
-            <!-- Content will be dynamically loaded here -->
-        </div>
-        <script type="module" src="./js/main.js"></script>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Pong Portal</title>
+    <link href="./css/output.css" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Orbitron:700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" type="image/png" href="./assets/logo.png" />
+    <!-- Runtime configuration -->
+    <script>
+      window.APP_CONFIG = {
+        API_URL: "{{PUBLIC_API_URL}}",
+        WS_URL: "{{PUBLIC_WS_URL}}",
+      };
+    </script>
+  </head>
+  <body>
+    <div id="app">
+      <!-- Content will be dynamically loaded here -->
+    </div>
+    <script type="module" src="./js/main.js"></script>
+  </body>
 </html>
