--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="UTF-8" />
@@ -23,8 +23,11 @@
       <!-- Content will be dynamically loaded here -->
     </div>
 
-    <div id="error-popup" class="fixed bottom-5 left-1/2 transform -translate-x-1/2 p-3 bg-red-500 text-white rounded shadow-md z-50 hidden"></div>
-    
+    <div
+      id="error-popup"
+      class="fixed bottom-5 left-1/2 transform -translate-x-1/2 p-3 bg-red-500 text-white rounded shadow-md z-50 hidden"
+    ></div>
+
     <script type="module" src="./js/main.js"></script>
   </body>
 </html>
