refactor: clean up HTML doctype and improve formatting in multiple files

--- a/live-chat/src/www/unified-ws-client.html
+++ b/live-chat/src/www/unified-ws-client.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -12,9 +12,8 @@
       }
 
       body {
-        font-family:
-          -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
-          sans-serif;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
+          Cantarell, sans-serif;
         background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         min-height: 100vh;
         padding: 20px;
@@ -662,7 +661,9 @@
 
         // Call the REST API to block the user
         fetch(
-          `${location.protocol === "https:" ? "https" : "http"}://${location.hostname}${location.port ? `:${location.port}` : ""}/lobby/block`,
+          `${location.protocol === "https:" ? "https" : "http"}://${location.hostname}${
+            location.port ? `:${location.port}` : ""
+          }/lobby/block`,
           {
             method: "POST",
             headers: {
@@ -731,10 +732,12 @@
             document.getElementById("joinLobbyBtn").onclick = leaveLobby;
             updateUserList(data.allUsers);
             document.getElementById("chatTitle").textContent = "Lobby";
-            document.getElementById("chatSubtitle").textContent =
-              `${data.allUsers.length} users online`;
-            document.getElementById("messages").innerHTML =
-              `<div class="message system">${data.message}</div>`;
+            document.getElementById(
+              "chatSubtitle"
+            ).textContent = `${data.allUsers.length} users online`;
+            document.getElementById(
+              "messages"
+            ).innerHTML = `<div class="message system">${data.message}</div>`;
             break;
 
           case "lobby_left":
@@ -748,8 +751,9 @@
           case "user_list_update":
             updateUserList(data.allUsers);
             if (inLobby) {
-              document.getElementById("chatSubtitle").textContent =
-                `${data.allUsers.length} users online`;
+              document.getElementById(
+                "chatSubtitle"
+              ).textContent = `${data.allUsers.length} users online`;
             }
             break;
 
